// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add Agent Modal renders correctly 1`] = `
.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c7 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c7:hover {
  opacity: 0.90;
}

.c7:focus {
  outline: none;
}

.c7:active {
  opacity: 0.80;
}

.c8 {
  background-color: transparent;
  border: 1px solid;
}

.c9 {
  display: grid;
  grid-template-rows: [title] 50px [description] 1fr;
  padding: 20px;
  min-height: 180px;
}

.c11 {
  grid-row: title;
  width: 80%;
  margin: 0 auto;
  text-align: center;
}

.c12 {
  grid-row: description;
  padding: 10px;
  font-size: 0.85rem;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c2 {
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c3 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c4 {
  grid-row: content;
  padding: 20px;
}

.c5 {
  display: grid;
  grid-template-columns: [column-one] 50% [column-two] 50%;
  margin: 20px 0px 20px 0px;
}

.c6 {
  grid-column: column-one;
  margin-right: 10px;
}

.c13 {
  grid-column: column-two;
  margin-left: 10px;
}

.c10 {
  width: 100%;
}

@media (max-width:47.9375em) {
  .c5 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    grid-row: row-one;
    margin-right: 0px;
    margin: 15px;
  }
}

@media (max-width:47.9375em) {
  .c13 {
    grid-column: column-one;
    grid-row: row-two;
    margin-left: 0px;
    margin: 15px;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1 c2"
  >
    <h2
      className="c3"
    >
      Add new agent
    </h2>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <button
            className="c7 c8 c9 c10"
            onClick={[Function]}
          >
            <h3
              className="c11"
            >
              Directly on target machine.
            </h3>
            <p
              className="c12"
            >
              You have the correct permissions to download the binary directly on the target machine.
            </p>
          </button>
        </div>
        <div
          className="c13"
        >
          <button
            className="c7 c8 c9 c10"
            onClick={[Function]}
          >
            <h3
              className="c11"
            >
              Manual upload
            </h3>
            <p
              className="c12"
            >
              You download and upload the binary yourself.
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`add Agent Modal selects directly correctly 1`] = `
.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c17 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c17:hover {
  opacity: 0.90;
}

.c17:focus {
  outline: none;
}

.c17:active {
  opacity: 0.80;
}

.c18 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c20 {
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c12 {
  border: none;
  border-radius: 5px;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 10px;
  width: 230px;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  z-index: 1;
  border-radius: 4px;
  position: fixed;
}

.c15 {
  padding: 15px;
}

.c15:hover {
  cursor: pointer;
  opacity: 0.6;
}

.c13 {
  border-color: white transparent;
  border-style: solid;
  float: right;
  margin-top: 5px;
  border-width: 7px 7px 0px 7px;
  height: 0px;
  width: 0px;
  margin-left: 10px;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c8 {
  height: 80px;
}

.c10 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c10:focus {
  outline: none;
  border: 1px solid;
}

.c16 {
  display: grid;
  grid-template-columns: 50% 50%;
  margin: 20px 0px 20px 0px;
}

.c5 {
  display: grid;
  width: 100%;
  grid-template-columns: [text] 50% [dropdown] 50%;
}

.c7 {
  grid-column: dropdown;
}

.c11 {
  width: 200px;
  float: right;
}

.c6 {
  grid-column: text;
  line-height: 75px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c21 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c9 {
  font-family: 'B612',sans-serif;
  font-weight: 600;
  width: 200px;
  float: right;
}

.c19 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c2 {
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c3 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c4 {
  grid-row: content;
  padding: 20px;
}

@media (max-width:47.9375em) {
  .c16 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [text] 30px [dropdown] 85px;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    grid-column: column-one;
    grid-row: dropdown;
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    width: 100%;
    line-height: 100%;
    grid-column: column-one;
    grid-row: text;
  }
}

@media (max-width:47.9375em) {
  .c21 {
    width: 100%;
    margin-top: 15px;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {
  .c19 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1 c2"
  >
    <h2
      className="c3"
    >
      Add new agent
    </h2>
    <div
      className="c4"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Agent name
          </p>
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              <input
                className="c10"
                name="name"
                onChange={[Function]}
                placeholder="007"
                type="name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Operating system
          </p>
          <div
            className="c7"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                id="dropdown"
                onClick={[Function]}
              >
                linux
                <div
                  className="c13"
                />
              </div>
              <ul
                className="c14"
              >
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  darwin
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  freebsd
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  openbsd
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Architecture
          </p>
          <div
            className="c7"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                id="dropdown"
                onClick={[Function]}
              >
                amd64
                <div
                  className="c13"
                />
              </div>
              <ul
                className="c14"
              >
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  arm64
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  arm
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="c16"
        >
          <button
            className="c17 c18 c19"
            id="closeButton"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="c17 c20 c21"
            onClick={null}
          >
            Create agent
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`add Agent Modal selects manual correctly 1`] = `
.c0 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c17 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c17:hover {
  opacity: 0.90;
}

.c17:focus {
  outline: none;
}

.c17:active {
  opacity: 0.80;
}

.c18 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c20 {
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

.c12 {
  border: none;
  border-radius: 5px;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 600;
  cursor: pointer;
  padding: 15px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  margin-top: 10px;
  width: 230px;
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  z-index: 1;
  border-radius: 4px;
  position: fixed;
}

.c15 {
  padding: 15px;
}

.c15:hover {
  cursor: pointer;
  opacity: 0.6;
}

.c13 {
  border-color: white transparent;
  border-style: solid;
  float: right;
  margin-top: 5px;
  border-width: 7px 7px 0px 7px;
  height: 0px;
  width: 0px;
  margin-left: 10px;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c8 {
  height: 80px;
}

.c10 {
  min-height: 50px;
  width: 100%;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c10:focus {
  outline: none;
  border: 1px solid;
}

.c16 {
  display: grid;
  grid-template-columns: 50% 50%;
  margin: 20px 0px 20px 0px;
}

.c5 {
  display: grid;
  width: 100%;
  grid-template-columns: [text] 50% [dropdown] 50%;
}

.c7 {
  grid-column: dropdown;
}

.c11 {
  width: 200px;
  float: right;
}

.c6 {
  grid-column: text;
  line-height: 75px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.c21 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c9 {
  font-family: 'B612',sans-serif;
  font-weight: 600;
  width: 200px;
  float: right;
}

.c19 {
  width: 200px;
  height: 50px;
  margin: auto;
  display: block;
}

.c2 {
  display: grid;
  grid-template-rows: [title] 50px [content] 1fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 600px;
  width: 100%;
  height: auto;
}

.c3 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c4 {
  grid-row: content;
  padding: 20px;
}

@media (max-width:47.9375em) {
  .c16 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [row-one] 1fr [row-two] 1fr;
  }
}

@media (max-width:47.9375em) {
  .c5 {
    grid-template-columns: [column-one] 100%;
    grid-template-rows: [text] 30px [dropdown] 85px;
  }
}

@media (max-width:47.9375em) {
  .c7 {
    grid-column: column-one;
    grid-row: dropdown;
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c11 {
    width: 100%;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    width: 100%;
    line-height: 100%;
    grid-column: column-one;
    grid-row: text;
  }
}

@media (max-width:47.9375em) {
  .c21 {
    width: 100%;
    margin-top: 15px;
  }
}

@media (max-width:47.9375em) {
  .c9 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {
  .c19 {
    width: 100%;
    grid-row: row-two;
  }
}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

@media (max-width:47.9375em) {

}

<div
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1 c2"
  >
    <h2
      className="c3"
    >
      Add new agent
    </h2>
    <div
      className="c4"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Agent name
          </p>
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              <input
                className="c10"
                name="name"
                onChange={[Function]}
                placeholder="007"
                type="name"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Operating system
          </p>
          <div
            className="c7"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                id="dropdown"
                onClick={[Function]}
              >
                linux
                <div
                  className="c13"
                />
              </div>
              <ul
                className="c14"
              >
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  darwin
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  freebsd
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  openbsd
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="c5"
        >
          <p
            className="c6"
          >
            Architecture
          </p>
          <div
            className="c7"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                id="dropdown"
                onClick={[Function]}
              >
                amd64
                <div
                  className="c13"
                />
              </div>
              <ul
                className="c14"
              >
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  arm64
                </li>
                <li
                  className="c15"
                  onClick={[Function]}
                >
                  arm
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="c16"
        >
          <button
            className="c17 c18 c19"
            id="closeButton"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
          <button
            className="c17 c20 c21"
            onClick={null}
          >
            Create agent
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
